# MedicalVision

./: README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  database.py  main.py  pyproject.toml  requirements.txt
backend/api/v1/: admin.py  analyses.py  auth.py  patients.py
backend/core/: cv_stub.py  security.py
backend/crud/: analysis_crud.py  user_crud.py
backend/models/: pydantic_models.py  sql_models.py
frontend/: Dockerfile  README.md
frontend/src/: App.jsx
frontend/src/api/: admin.js  analysis.js
frontend/src/components/: AnalysisDetailModal.jsx  TreatmentForm.jsx  UploadForm.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  ClinicianDashboard.jsx  DiagnosticianDashboard.jsx  LoginPage.jsx  RegisterPage.jsx
